fix(vimEditor): render whitespace

--- a/src/pages/apps/or-tree-notes/or-tree-notes.scss
+++ b/src/pages/apps/or-tree-notes/or-tree-notes.scss
@@ -52,6 +52,10 @@ or-tree-notes {
     height: 80vh;
     width: 80vw;
 
+    .editor-line{
+      white-space: pre;
+    }
+
     #caret {
       position: absolute;
       top: 0;
